--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@ node_modules
 
 # builds
 build
-dist
 
 # misc
 .DS_Store
@@ -21,3 +20,5 @@ package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.history
